--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p id="message">Guess a number between 0 and 100</p>
         <input id="user-input" type="number">
     </main>
+    <button onClick="window.location.reload();">Try Again</button>
 </body>
 
 </html>
